--- a/package.json
+++ b/package.json
@@ -3,65 +3,53 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/plugin-proposal-decorators": "^7.12.1",
-    "@babel/plugin-syntax-jsx": "^7.12.1",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
-    "autoprefixer": "^10.1.0",
-    "axios": "^0.21.0",
-    "babel": "^6.23.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.6.3",
-    "babel-loader": "^8.2.2",
-    "babel-preset-react-app": "^10.0.0",
-    "babel-runtime": "^6.26.0",
-    "case-sensitive-paths-webpack-plugin": "^2.3.0",
-    "chalk": "^4.1.0",
-    "chokidar": "^3.4.3",
-    "css-loader": "^5.0.1",
-    "dotenv": "^8.2.0",
-    "enzyme": "^3.11.0",
-    "eslint": "^7.16.0",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-flowtype": "^5.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-webpack-plugin": "^2.4.1",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^6.2.0",
-    "fs-extra": "^9.0.1",
-    "fsevents": "^2.2.1",
-    "html-webpack-plugin": "^4.5.0",
-    "jest": "^26.6.3",
-    "mini-css-extract-plugin": "^1.3.3",
-    "object-assign": "^4.1.1",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-loader": "^4.1.0",
-    "promise": "^8.1.0",
-    "prop-types": "^15.7.2",
+    "autoprefixer": "7.1.2",
+    "axios": "^0.16.2",
+    "babel-core": "6.25.0",
+    "babel-eslint": "7.2.3",
+    "babel-jest": "20.0.3",
+    "babel-loader": "7.1.1",
+    "babel-preset-react-app": "^3.0.2",
+    "babel-runtime": "6.26.0",
+    "case-sensitive-paths-webpack-plugin": "2.1.1",
+    "chalk": "1.1.3",
+    "css-loader": "0.28.4",
+    "dotenv": "4.0.0",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.1",
+    "eslint": "4.4.1",
+    "eslint-config-react-app": "^2.0.0",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-flowtype": "2.35.0",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-react": "7.1.0",
+    "extract-text-webpack-plugin": "3.0.0",
+    "file-loader": "0.11.2",
+    "fs-extra": "3.0.1",
+    "html-webpack-plugin": "2.29.0",
+    "jest": "20.0.4",
+    "object-assign": "4.1.1",
+    "postcss-flexbugs-fixes": "3.2.0",
+    "postcss-loader": "2.0.6",
+    "promise": "8.0.1",
+    "prop-types": "^15.6.0",
     "r": "0.0.5",
-    "react": "^17.0.1",
-    "react-dev-utils": "^11.0.1",
-    "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.1",
-    "react-test-renderer": "^17.0.1",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "style-loader": "^2.0.0",
-    "sw-precache-webpack-plugin": "^1.0.0",
-    "typescript": "^4.1.3",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.11.0",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-manifest-plugin": "^3.0.0",
-    "whatwg-fetch": "^3.5.0"
+    "react": "^16.0.0",
+    "react-dev-utils": "^4.0.1",
+    "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-test-renderer": "^16.0.0",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
+    "style-loader": "0.18.2",
+    "sw-precache-webpack-plugin": "0.11.4",
+    "url-loader": "0.5.9",
+    "webpack": "3.5.1",
+    "webpack-dev-server": "2.7.1",
+    "webpack-manifest-plugin": "1.2.1",
+    "whatwg-fetch": "2.0.3"
   },
   "scripts": {
     "start": "node scripts/start.js",
@@ -108,17 +96,5 @@
   },
   "eslintConfig": {
     "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   }
 }
