--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "^6.9.1",
     "autoprefixer": "7.1.2",
     "axios": "^0.16.2",
     "babel-core": "6.25.0",
@@ -38,7 +39,7 @@
     "react": "^16.0.0",
     "react-dev-utils": "^4.0.1",
     "react-dom": "^16.0.0",
-    "react-redux": "^5.0.6",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^4.2.2",
     "react-test-renderer": "^16.0.0",
     "redux": "^3.7.2",
